# clawflow

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  PR_GUIDELINES.md  README.md  SPEC.md  advise.md  commit_and_push.sh  llm.json  openclaw_skill.py  pyproject.toml  pytest.ini  run_server.py  self-update.yaml  setup.py  update_log_actor_critic.txt
.github/workflows/: ci.yml
agents/accessibility_auditor/: AGENTS.md  BOOTSTRAP.md  IDENTITY.md  SOUL.md
agents/api_tester/: AGENTS.md  BOOTSTRAP.md  IDENTITY.md  SOUL.md
agents/evidence_collector/: AGENTS.md  BOOTSTRAP.md  IDENTITY.md  SOUL.md
agents/performance_benchmarker/: AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  SOUL.md
agents/reality_checker/: AGENTS.md  BOOTSTRAP.md  IDENTITY.md  SOUL.md
agents/test_results_analyzer/: AGENTS.md  BOOTSTRAP.md  IDENTITY.md  SOUL.md
agents/tool_evaluator/: AGENTS.md  BOOTSTRAP.md  IDENTITY.md  SOUL.md
agents/workflow_optimizer/: AGENTS.md  BOOTSTRAP.md  IDENTITY.md  SOUL.md  USER.md
api/: logging_config.py  main.py
config/: actor_critic_config.yaml
docs/: README.md  api.md  architecture.md  frontend.md  models.md  openclaw.md
examples/: claw.yaml  quant-trading.yaml
prompt/: CLAW-001-项目批评与质疑报告.md  CLAW-002-增强型执行Prompt.md  Task-01-RAG向量生成重构.md  Task-02-工作流执行接入OpenClaw.md  Task-03-前端状态管理重构.md  Task-04-Agent模板自动同步.md
templates/: README.md  code-dev.yaml  data-analysis.yaml  quant-strategy.yaml  research-paper.yaml  self-update.yaml
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  (+1 more)
webui/: __init__.py  app.py  requirements.txt
(+95 files in other folders)
